version 3.41 2023-06-01
- added "last action" tooltips on action counts on main submission list
- added "back to reports" logic to link back to reports from submissions + contacts
- simplified entropy of get_hash() by using sha1_file('config_db.php')
- session_name() is now always unique per SM install using "submgr_" + sha1($getcwd)
- added upload_max_filesize routine to /maintenance/fields/
- moved TEST_MAIL constant from inc_common.php to config_db.php
- improved error/exception handling in db_connect()
- added check for custom.js
- refactoring of disable_submit() to dynamically create all submit_hidden/form_hash form fields
- added $password_length_min (8) + $password_length_max (72) global variables (will be derived from $fields)
- removed $config['max_file_size'] $config['max_comments_size'] $config['default_country'] $config['default_mailing_list'] $config['use_genres'] (all now reside in $fields)
- added get_bytes_formatted() function
- added get_groups() function
- added get_fields() function
- added "fields" table to store all form_main() properties
- refactoring of form_main() and all associated validation/display logic to allow customization of form fields

version 3.40 2023-05-13
- added getimagesize() to $config['logo_path'] in header.php
- changed login / password reset messaging (thanks @jayyx2)
- simplified form_hash() to eliminate the need for $GLOBALS['form_hash']
- replaced all JavaScript calls to match() with indexOf() that do not require RegEx
- upgraded to PHPMailer 6.8.0 (2023-03-06)
- Action Types: "from_reader" all off by default
- added more fuzzy checks for "utf8" in /maintenance/update data structure/ to allow for other UTF-8 character sets + collations
- added $config['check_updates'] (default = Y)
- added kill_session() to form_post() + flush_session() to redirect()
- security overhaul of payment.php (hash now required)
- redacted cc_number in display()
- added support for PayPal Payments Pro REST API (renamed NVP API)