@@ -1,9 +1,10 @@
 version 3.41 2023-06-01
 - added "last action" tooltips on action counts on main submission list
-- added "back to reports" logic to link back to reports from submissions + contacts
+- added "back to reports" logic to link back from submissions + contacts
 - simplified entropy of get_hash() by using sha1_file('config_db.php')
 - session_name() is now always unique per SM install using "submgr_" + sha1($getcwd)
 - added upload_max_filesize routine to /maintenance/fields/
+- added TIDY constant to config_db.php
 - moved TEST_MAIL constant from inc_common.php to config_db.php
 - improved error/exception handling in db_connect()
 - added check for custom.js
